--- a/html/index.html
+++ b/html/index.html
@@ -12,5 +12,25 @@
         <p>自分のクリエイターブランドを立ち上げましょう。</p>
       </div>
     </div>
+    <div class="slide">
+      <div class="slide-content">
+        <h2>SNSのIDが取られてないか確認しましょう</h2>
+      </div>
+    </div>
+    <div class="slide">
+      <iframe src="https://namae.dev"></iframe>
+    </div>
+    <div class="slide">
+      <div class="slide-content">
+        <h2>IDを決めましょう</h2>
+        <input type="text" value="TakutoYoshikai">
+      </div>
+    </div>
+    <div class="slide">
+      <div class="slide-content">
+        <h2>クリエイター名を決めましょう</h2>
+        <input type="text" value="3hacks">
+      </div>
+    </div>
   </body>
 </html>
