--- a/html/index.html
+++ b/html/index.html
@@ -43,6 +43,12 @@
     </div>
     <div class="slide">
       <div class="slide-content">
+        <h2>肩書きを決めましょう</h2>
+        <input type="text" value="SOFTWARE CREATOR / HACKER" class="job">
+      </div>
+    </div>
+    <div class="slide">
+      <div class="slide-content">
         <h2>ドメインを取りましょう</h2>
         <button onclick="openDomainShop()">ドメインサイト</button>
       </div>
